# BlindDeconvolution

./: README.md
initial_code/include/: fast_deconv_bregman.h  ms_blind_deconv.h  pcg_kernel_irls_conv.h  solve_image_bregman.h  ss_blind_deconv.h
initial_code/src/: conv2.cpp  deconv_opts.cpp  solve_image_bregman.cpp
refactored_code/: CMakeLists.txt  main.cpp
refactored_code/include/: conv2.h  deconv_opts.h  fast_deconv_bregman.h  ms_blind_deconv.h  pcg_kernel_irls_conv.h  solve_image_bregman.h  ss_blind_deconv.h
refactored_code/src/: conv2.cpp  deconv_opts.cpp  fast_deconv_bregman.cpp  ms_blind_deconv.cpp  pcg_kernel_irls_conv.cpp  solve_image_bregman.cpp  ss_blind_deconv.cpp
